--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="./css/headerStyle.css">
     <link rel="stylesheet" href="./css/footerStyle.css">
     <link rel="stylesheet" href="./css/bodyStyle.css">
+    <script src="./scriptPraEnviarOEmail.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+        emailjs.init("user_b6Z8hKKaxhQxNF2BzMPsk");
+        })();
+    </script>
 </head>
 <body>
     <!-- HEADER -->
@@ -41,6 +48,11 @@
         
         <!-- CONTEUDO PRINCIPAL -->
         <main>
+          <h2>Entre em contato com a gente!</h2>
+          <input type="text" id="fromName" name="nome" placeholder="Seu Nome" />
+          <input type="text" id="toName" name="email"placeholder="Seu E-m@il" />
+          <textarea placeholder="Escreva aqui sua menssagem"name="textarea" id="msg" cols="30" rows="10"></textarea>
+          <button onclick="enviar()">Enviar</button>
         </main>
         <!-- fim do CONTEUDO PRINCIPAL -->
 
