sem reCaptcha mas funcionando o email

--- a/contato.html
+++ b/contato.html
@@ -51,8 +51,11 @@
           <h2>Entre em contato com a gente!</h2><br/>
           <input type="text" id="fromName" placeholder="Seu nome aqui" />
           <input type="email" id="email" placeholder="Seu e-m@il aqui" />
-          <input type="text" id="msg" placeholder="Sua menssagem aqui" />
+          <textarea name="menssagem" id="msg" placeholder="Sua menssagem aqui" cols="30" rows="10"></textarea>
           <button onclick="enviar()">Enviar</button>
+
+          
+
         </main>
         <!-- fim do CONTEUDO PRINCIPAL -->
 
