view de contatos pronta com modificacao de variaveis

--- a/contato.html
+++ b/contato.html
@@ -48,9 +48,9 @@
         
         <!-- CONTEUDO PRINCIPAL -->
         <main>
-          <h2>Entre em contato com a gente!</h2>
+          <h2>Entre em contato com a gente!</h2><br/>
           <input type="text" id="fromName" name="nome" placeholder="Seu Nome" />
-          <input type="text" id="toName" name="email"placeholder="Seu E-m@il" />
+          <input type="text" id="email" name="email"placeholder="Seu E-m@il" />
           <textarea placeholder="Escreva aqui sua menssagem"name="textarea" id="msg" cols="30" rows="10"></textarea>
           <button onclick="enviar()">Enviar</button>
         </main>
