--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <hr/>
             <h2>Novidades</h2><br/>
             <h3>A volta aos palcos</h3><br/><br/>
-            <p> O taverna volta a se apresentar nos palcos de Belo Horizonte!<br/>
-                depois de enfrentarmos esse momento de pandemia, aos poucos estamos voltando aos shows ao vivo em carne, osso e música!
-                acesse a nossa agenda para saber qual o próximo show que você vai ir, para curtir uma viagem aos tempos antigos com a gente!
+            <p> O Taverna volta a se apresentar nos palcos de Belo Horizonte!<br/>
+                Depois de enfrentarmos esse momento de pandemia, aos poucos estamos voltando aos shows ao vivo em carne, osso e música!
+                Acesse a nossa agenda para saber qual o próximo show que você vai ir, para curtir uma viagem aos tempos antigos com a gente!
             </p> 
             <img src="./img/fotos/FotoDoRicardoTabernaSanteNovembro.jpg" alt="Foto de Ricardo Marques novembro de 2021" name='foto1' style="margin-top: 10px; margin-bottom: 10px; border-radius: 15px; width: 50%; align-self: center;">
             <label for="foto1" style="align-self: center;">"Foto de Ricardo Marques"</label>
