--- a/contato.html
+++ b/contato.html
@@ -30,13 +30,13 @@
     
           <div id="menu">
             <ul>
-              <li><a href="./index.html">home</a></li> 
-              <li><a href="./abanda.html">A banda</a></li> 
-              <li><a href="./merchan.html">merchan</a></li>
-              <li><a href="./media.html">média</a></li>
-              <li><a href="./agenda.html"> agenda </a></li>
-              <li><a href="./presskit.html">pressKit</a></li>
-              <li><a href="./contato.html">contato</a></li>
+              <li><a class="link" href="./index.html">home</a></li> 
+              <li><a class="link" href="./abanda.html">A banda</a></li> 
+              <li><a class="link" href="./merchan.html">merchan</a></li>
+              <li><a class="link" href="./media.html">média</a></li>
+              <li><a class="link" href="./agenda.html"> agenda </a></li>
+              <li><a class="link" href="./presskit.html">pressKit</a></li>
+              <li><a class="link" href="./contato.html">contato</a></li>
             </ul>
           </div>
           
