adcionando a view media provisoria

--- a/media.html
+++ b/media.html
@@ -40,8 +40,11 @@
         <!-- fim do HEADER -->
         
         <!-- CONTEUDO PRINCIPAL -->
-        <main>
-        </main>
+        <main id="MediaContainer">
+          <div id="icones">Ouvir no: <a href=""><img id="appleIcone" class="MediaIcones" src="img/icons/apple.png" alt=""></a> <a href=""><img id="deezerIcone" class="MediaIcones" src="img/icons/deezer.png" alt=""></a> <a href=""><img id="spotifyIcone" class="MediaIcones" src="img/icons/spotify.png" alt=""></a> <a href=""><img id="amazonIcone" class="MediaIcones" src="img/icons/amazon.png" alt=""></a></div>
+          
+          <button style="font-size: xx-large;"><a href="https://www.youtube.com/c/BandaTaverna/playlists">Videos</a></button>
+          </main>
         <!-- fim do CONTEUDO PRINCIPAL -->
 
         <!-- FOOTER -->
