adcionando a view merchan provisoria

--- a/merchan.html
+++ b/merchan.html
@@ -41,6 +41,10 @@
         
         <!-- CONTEUDO PRINCIPAL -->
         <main>
+          <hr/>
+          <h3>Link for our bandcamp</h3><br/>
+          https://bandataverna.bandcamp.com
+          <hr/>
         </main>
         <!-- fim do CONTEUDO PRINCIPAL -->
 
