alterando a parte dos merchan

--- a/merchan.html
+++ b/merchan.html
@@ -42,8 +42,10 @@
         <!-- CONTEUDO PRINCIPAL -->
         <main>
           <hr/>
-          <h3>Link for our bandcamp</h3><br/>
-          https://bandataverna.bandcamp.com
+          <div >
+            <h3>Link for our bandcamp</h3><br/>
+            <a class="linkdetabela" href="https://bandataverna.bandcamp.com" target="__blank"> Band Camp Store</a>
+          </div>
           <hr/>
         </main>
         <!-- fim do CONTEUDO PRINCIPAL -->
