Adcionando elementos em merchan

--- a/merchan.html
+++ b/merchan.html
@@ -47,6 +47,13 @@
             <a class="linkdetabela" href="https://bandataverna.bandcamp.com" target="__blank"> Band Camp Store</a>
           </div>
           <hr/>
+          <div id="cd">
+            <img id='fotocd'src="./img/fotos/380A1D7F-D9FF-4038-90A9-D85BDEBE2724.png" alt="">
+            <div id='descricao'>
+              <h3>Álbum Libertas físico R$ 25,00 (em breve)</h3>
+            </div>
+          </div>
+          
         </main>
         <!-- fim do CONTEUDO PRINCIPAL -->
 
