--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a class="link" href="./index.html">home</a></li> 
                 <li><a class="link" href="./abanda.html">A banda</a></li> 
                 <li><a class="link" href="./merchan.html">merchan</a></li>
-                <li><a class="link" href="./media.html">média</a></li>
+                <li><a class="link" href="./media.html">media</a></li>
                 <li><a class="link" href="./agenda.html"> agenda </a></li>
                 <li><a class="link" href="./presskit.html">pressKit</a></li>
                 <li><a class="link" href="./contato.html">contato</a></li>
