--- a/merchan.html
+++ b/merchan.html
@@ -26,7 +26,7 @@
               <li><a class="link" href="./index.html">home</a></li> 
               <li><a class="link" href="./abanda.html">A banda</a></li> 
               <li><a class="link" href="./merchan.html">merchan</a></li>
-              <li><a class="link" href="./media.html">média</a></li>
+              <li><a class="link" href="./media.html">media</a></li>
               <li><a class="link" href="./agenda.html"> agenda </a></li>
               <li><a class="link" href="./presskit.html">pressKit</a></li>
               <li><a class="link" href="./contato.html">contato</a></li>
@@ -53,7 +53,12 @@
               <h3>Álbum Libertas físico R$ 25,00 (em breve)</h3>
             </div>
           </div>
-          
+          <div id="cd">
+            <img id='fotocd'src="./img/fotos/380A1D7F-D9FF-4038-90A9-D85BDEBE2724.png" alt="">
+            <div id='descricao'>
+              <h3>Álbum Libertas físico R$ 25,00 (em breve)</h3>
+            </div>
+          </div>
         </main>
         <!-- fim do CONTEUDO PRINCIPAL -->
 
