--- a/media.html
+++ b/media.html
@@ -43,7 +43,7 @@
         <main id="MediaContainer">
           <div id="icones">Ouvir no: <a href=""><img id="appleIcone" class="MediaIcones" src="img/icons/apple.png" alt=""></a> <a href=""><img id="deezerIcone" class="MediaIcones" src="img/icons/deezer.png" alt=""></a> <a href=""><img id="spotifyIcone" class="MediaIcones" src="img/icons/spotify.png" alt=""></a> <a href=""><img id="amazonIcone" class="MediaIcones" src="img/icons/amazon.png" alt=""></a></div>
           
-          <button style="font-size: xx-large;"><a href="https://www.youtube.com/c/BandaTaverna/playlists">Videos</a></button>
+          <button style="font-size: xx-large;"><a class='linkdetabela' href="https://www.youtube.com/c/BandaTaverna/playlists">Videos</a></button>
           </main>
         <!-- fim do CONTEUDO PRINCIPAL -->
 
@@ -51,10 +51,10 @@
         <footer>
             <link rel='stylesheet' href='stylesheets/headerStyle.css' />
             <link rel="stylesheet" href="stylesheets/footerStyle.css">
-            <p>
+            <p class='dizeresFooter'>
                 Taverna © 2012 - 2021
             </p>
-            <p>
+            <p class='dizeresFooter'>
                 Todos os direitos reservados
             </p>
             <img id="tavernaFooter" src="img/Taverna.png" alt="">
