--- a/perfilmariana.html
+++ b/perfilmariana.html
@@ -59,12 +59,12 @@
         <footer>
             <link rel='stylesheet' href='stylesheets/headerStyle.css' />
             <link rel="stylesheet" href="stylesheets/footerStyle.css">
-            <p>
-                Taverna © 2012 - 2021
-            </p>
-            <p>
-                Todos os direitos reservados
-            </p>
+            <p class='dizeresFooter'>
+              Taverna © 2012 - 2021
+          </p>
+          <p class='dizeresFooter'>
+              Todos os direitos reservados
+          </p>
             <img id="tavernaFooter" src="img/Taverna.png" alt="">
             <div id="icones">
                 <a href="https://www.facebook.com/bandataverna" target="_blank"><img class="footerIcon" src="img/icons/facebook.png" alt=""></a>
