presskit com download

--- a/presskit.html
+++ b/presskit.html
@@ -41,6 +41,10 @@
         
         <!-- CONTEUDO PRINCIPAL -->
         <main>
+          <a href="./presskitTaverna.zip">Download Presskit completo</a>
+          <img src="./img/FotoBonfire.jpg" style='width: 100%; margin-bottom: 10px;'/>
+          <img src="./img/FotoPromo.jpg "style='width: 100%;margin-bottom: 10px;'/>
+          <img src="./img/FotoTochas.jpg" style='width: 100%; margin-bottom: 10px;'/>
         </main>
         <!-- fim do CONTEUDO PRINCIPAL -->
 
