--- a/presskit.html
+++ b/presskit.html
@@ -41,7 +41,7 @@
         
         <!-- CONTEUDO PRINCIPAL -->
         <main>
-          <a href="./presskitTaverna.zip">Download Presskit completo</a>
+          <a href="./presskitTaverna.zip" style="color: black; margin-bottom: 20px;"> >> Download Presskit completo << </a>
           <img src="./img/FotoBonfire.jpg" style='width: 100%; margin-bottom: 10px;'/>
           <img src="./img/FotoPromo.jpg "style='width: 100%;margin-bottom: 10px;'/>
           <img src="./img/FotoTochas.jpg" style='width: 100%; margin-bottom: 10px;'/>
