--- a/contato.html
+++ b/contato.html
@@ -49,12 +49,12 @@
         <!-- CONTEUDO PRINCIPAL -->
         <main>
           <h2>Entre em contato com a gente!</h2><br/>
-          <h4>Management:  <a style="margin-bottom: 10px;" class="linkdetabela" href="mailto:coolhatrecords@gmail.com?subject=Taverna's management"> coolhatrecords@gmail.com </a></h4>
+          
           <input type="text" id="fromName" placeholder="Seu nome aqui" />
           <input type="email" id="email" placeholder="Seu e-m@il aqui" />
           <textarea name="menssagem" id="msg" placeholder="Sua menssagem aqui" cols="30" rows="10"></textarea>
-          <button onclick="enviar()">Enviar</button>
-
+          <button onclick="enviar()" style="margin-bottom: 50px;">Enviar</button>
+          <h4>Direct management contact:  <a style="margin-bottom: 10px; " class="linkdetabela" href="mailto:coolhatrecords@gmail.com?subject=Taverna's management"> coolhatrecords@gmail.com </a></h4>
           
 
         </main>
