--- a/abanda.html
+++ b/abanda.html
@@ -63,7 +63,7 @@
               
             </div>
             <p>
-              Bodhran, Alfaia, Derbak, Kazoo, Backing Vocals
+              Bodhran, Percussão, Kazoo, Backing Vocals
             </p>
             <hr/>
             <div id="membro">
