--- a/presskit.html
+++ b/presskit.html
@@ -41,7 +41,7 @@
         
         <!-- CONTEUDO PRINCIPAL -->
         <main>
-          <a href="https://linktr.ee/Taverna">link Tree da banda</a>
+          <a href="https://linktr.ee/Taverna" style="color: black; margin-bottom: 20px;">link Tree da banda</a>
           <a href="./presskitTaverna.zip" download="./presskitTaverna.zip" style="color: black; margin-bottom: 20px;"> >> Download Presskit completo << </a>
           <img src="./img/FotoBonfire.jpg" style='width: 100%; margin-bottom: 10px;'/>
           <img src="./img/FotoPromo.jpg "style='width: 100%;margin-bottom: 10px;'/>
