--- a/agenda.html
+++ b/agenda.html
@@ -48,10 +48,10 @@
                 <th>Entrada</th>
               </tr>
               <tr class="item">
-                <td>17/12/2021</td>
-                <td>20h</td>
-                <td>Taberna Santê, rua: Salinas, 2100 - Santa Tereza, Belo Horizonte<br/>
-                  <a class="linkdetabela"href="http://maps.google.com/maps/place/Taberna+Santê/@-19.9141036,-43.9175596,17z/data=!3m1!4b1!4m5!3m4!1s0xa69a261f1f3cf9:0x6faf34c873884acb!8m2!3d-19.9140957!4d-43.915368">
+                <td>19/03/2022</td>
+                <td>23h</td>
+                <td>Mulligans Pub, Rua Pium-i, nº 736 - Sion - Belo Horizonte<br/>
+                  <a class="linkdetabela"href="https://www.google.com/maps/place/Rua+Pium-%C3%8D,+736+-+Sion,+Belo+Horizonte+-+MG,+30310-080/@-19.9460211,-43.9331498,17z/data=!3m1!4b1!4m5!3m4!1s0xa699cc26e42665:0xa08b822e1745202!8m2!3d-19.9460211!4d-43.9309558">
                     ver no mapa 📍</a>
                 </td>
                 <td> Couvert R$15 </td>
